# playerIptvRs

./: Cargo.toml  Dioxus.toml  README.md
docs/: DESKTOP_STREAMING.md
