[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/m3u",
    "packages/app_web",
    "packages/app_desktop",
]
default-members = ["packages/app_web"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

